[workspace]
resolver = "2"
members = ["libs/epic_balance", "libs/epic_locale","libs/epic_prefs","tools/multitool-cli"]

[patch.crates-io]
prost-build = { git = "https://github.com/koxx12-dev/prost.git", branch = "latest-stable" }
prost-types = { git = "https://github.com/koxx12-dev/prost.git", branch = "latest-stable" }
prost-derive = { git = "https://github.com/koxx12-dev/prost.git", branch = "latest-stable" }
prost = { git = "https://github.com/koxx12-dev/prost.git", branch = "latest-stable" }
