[package]
name = "epic_locale"
version = "0.1.0"
edition = "2021"

[features]
default = []
serde = ["dep:pbjson-build", "dep:pbjson", "dep:serde"]
json = ["serde", "dep:serde_json"]
ron = ["serde", "dep:ron"]
csv = ["serde", "dep:csv"]
all = ["json", "ron", "csv"]

[dependencies]
prost = { git = "https://github.com/koxx12-dev/prost.git", branch = "latest-stable" }
serde = { version = "1.0.217", optional = true }
serde_json = { version = "1.0.137", optional = true, features = ["preserve_order"] }
pbjson = { version = "0.7.0", optional = true }
flate2 = "1.0.35"
anyhow = "1.0.95"
ron = { version = "0.8.1", optional = true }
csv = { version = "1.3.1", optional = true }

[build-dependencies]
prost-build = { git = "https://github.com/koxx12-dev/prost.git", branch = "latest-stable" }
pbjson-build = { version = "0.7.0", optional = true }
