[package]
name = "epic_prefs"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.13.3"
serde = "1.0.197"
serde_json = "1.0.128"
pbjson = "0.7.0"
anyhow = "1.0.82"
base64 = "0.22.1"
url-escape = "0.1.1"
chrono = "0.4.38"
yaserde = "0.11.1"
yaserde_derive = "0.11.1"

[build-dependencies]
prost-build = "0.13.3"
pbjson-build = "0.7.0"
