[package]
name = "epic_prefs"
edition = "2021"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:pbjson-build", "dep:pbjson", "dep:serde"]
json = ["serde", "dep:serde_json"]
ron = ["serde", "dep:ron"]
sdkv2 = ["dep:liblzma"]
all = ["json", "ron", "sdkv2"]

[dependencies]
prost = { git = "https://github.com/koxx12-dev/prost.git", branch = "latest-stable" }
serde = { version = "1.0.217", optional = true }
serde_json = { version = "1.0.137", optional = true, features = ["preserve_order"] }
pbjson = { version = "0.7.0", optional = true }
ron = { version = "0.8.1", optional = true }
anyhow = "1.0.95"
base64 = "0.22.1"
url-escape = "0.1.1"
chrono = "0.4.39"
yaserde = "0.11.2"
yaserde_derive = "0.11.2"
liblzma = { version = "0.3.5", optional = true }
indexmap = { version = "2.7.1", features = ["serde"] }

[build-dependencies]
prost-build = { git = "https://github.com/koxx12-dev/prost.git", branch = "latest-stable" }
pbjson-build = { version = "0.7.0", optional = true }