[package]
name = "multitool-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "abe_multitool"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dump = []

[dependencies]
epic_balance = { path = "../../libs/epic_balance"}
epic_prefs = {path = "../../libs/epic_prefs"}
epic_locale = {path = "../../libs/epic_locale"}
serde_json = "1.0.128"
prost = "0.13.3"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.89"

