[package]
name = "multitool-cli"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "abe_multitool"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dump = []

[dependencies]
epic_balance = { path = "../../libs/epic_balance", features = ["all"]}
epic_prefs = { path = "../../libs/epic_prefs", features = ["all"] }
epic_locale = { path = "../../libs/epic_locale", features = ["all"] }
serde_json = "1.0.128"
ron = "0.8.1"
prost = "0.13.3"
clap = { version = "4.5.20", features = ["derive"] }
anyhow = "1.0.89"

