[package]
name = "multitool-cli"
version = "0.3.1"
edition = "2021"

[[bin]]
name = "abe_multitool"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
dump = []

[dependencies]
epic_balance = { path = "../../libs/epic_balance", features = ["all"]}
epic_prefs = { path = "../../libs/epic_prefs", features = ["all"] }
epic_locale = { path = "../../libs/epic_locale", features = ["all"] }
serde_json = { version = "1.0.137", features = ["preserve_order"] }
ron = "0.8.1"
prost = { git = "https://github.com/koxx12-dev/prost.git", branch = "latest-stable" }
clap = { version = "4.5.27", features = ["derive"] }
anyhow = "1.0.95"

